Fix z-index of mass actions bar and height of public survey labels

--- a/app/assets/javascripts/angular/components/peopleScreen/peopleScreen.scss
+++ b/app/assets/javascripts/angular/components/peopleScreen/peopleScreen.scss
@@ -109,7 +109,6 @@ people-screen {
         position: sticky;
         top: 50px;
         left: 0;
-        z-index: 10;
 
         ng-md-icon,
         img {
